tests/bad/arith_binop_not_num.ae
/// fail: Operands must be integers

def main() {
    let x = true + 5
}